<resources>

    <string name="app_name">Python Lending Library</string>

    <!-- Main menu items for admin and testing of app -->
    <string name="action_insert_test_books">Insert Test Books</string>
    <string name="action_insert_test_Pythonistas">Insert Test Pythonistas</string>
    <string name="action_delete_all_data">Delete Books and Pythonistas</string>
    <string name="action_backup_database">Back Up Database</string>

    <!-- Library menu -->
    <string name="action_insert_book">Add a Book</string>

    <!-- Pythonista menu -->
    <string name="action_insert_pythonista">Add a Pythonista</string>

    <!-- Basic or minimum info to be shown in the list view -->
    <string name="category_basics">Book Info</string>

    <string name="hint_title">Book Title (Required)</string>

    <string name="hint_author">Author</string>

    <string name="category_publish_year">Year Published</string>
    <string name="book_borrower">Borrower</string>
    <string name="hint_borrower_name">Name</string>

    <!-- Toast messages in LibraryProvider->insertBook [CHAR LIMIT=NONE] -->
    <string name="library_provider_insert_book_good">Book save success</string>
    <string name="library_provider_insert_book_failed">Book save failed</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">OH NO Mr. Bill I\'m a lonely Pythonista with nothing to read!!!</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Please get started by adding a Python Book!</string>

    <!-- in menu.xml -->
    <string name="action_pythonsista">Pythonistas</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete this entry</string>


    <!-- in BookActivity -->
    <!-- Header for BookActivity Screen -->
    <string name="book_activity_title_edit_book">Edit Book</string>
    <string name="book_activity_title_add_book">Add Book</string>
    <string name="edit_update_book_failed">Book update failed</string>
    <string name="edit_update_book_success">Book update success</string>
    <string name="missing_book_title">Book title required to save book</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <!-- Delete alert dialog and delete single book -->
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this book</string>
    <string name="delete_book_successful"> Book deleted</string>
    <string name="delete_book_failure">Book not deleted (Error)</string>

    <!-- in PatronActivity -->
    <string name="empty_view_patron_text">Enter the Python library and turn on the lights!</string>
    <string name="empty_view_subtitle_patron_text">Please enter a new Pythonista to borrow a book.</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_first_name">first name</string>
    <string name="Pythonista">Pythonista</string>
    <string name="category_email">E-Mail</string>
    <string name="hint_email">email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_phone">phone number</string>

    <!-- in PythonistaActivity -->
    <string name="patron_activity_title_add_pythonista">Add Pythonista</string>
    <string name="patron_activity_title_edit_pythonista">Edit Pythonista</string>
    <string name="missing_first_last_name">First and Last Name Required</string>
    <string name="pythonista_provider_insert_pythonista_failed">Add Pythonista Failed</string>
    <string name="pythonista_provider_insert_pythonista_good">Pythonista Successfully Added</string>
    <string name="edit_update_pythonista_failed">Update Pythonista Failed</string>
    <string name="edit_update_pythonista_success">Update Pythonista Successful</string>
    <!-- Delete alert dialog for pythonistas -->
    <string name="delete_dialog_pythonista_msg">Delete this Pythonista</string>
    <string name="delete_pythonista_successful"> Pythonista deleted</string>
    <string name="delete_pythonista_failure">Pythonista not deleted (Error)</string>
</resources>
