<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http:/schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_insert_test_books"
        android:title="@string/action_insert_test_books"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_test_pythonistas"
        android:title="@string/action_insert_test_Pythonistas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_data"
        android:title="@string/action_delete_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backup_database"
        android:title="@string/action_backup_database"
        app:showAsAction="never" />


</menu>