<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context="com.babarehner.android.pycolib.EditActivity">

    <!-- Basics Category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_basics"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!--Title Field -->
            <EditText
                android:id="@+id/edit_title"
                android:hint="@string/hint_title"
                android:inputType="textCapWords"
                style="@style/EditFieldStyle"/>

            <!--Author Field -->
            <EditText
                android:id="@+id/edit_author"
                android:hint="@string/hint_author"
                android:inputType="textCapWords"
                style="@style/EditFieldStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
