<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- modified by Mike Rehner 12/2/2016 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".BookActivity">

    <!-- Title & Authorcategory -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_basics"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Title field -->
            <EditText
                android:id="@+id/edit_title"
                android:hint="@string/hint_title"
                android:inputType="textCapWords"
                style="@style/BookFieldStyle" />

            <!-- Author field -->
            <EditText
                android:id="@+id/edit_author"
                android:hint="@string/hint_author"
                android:inputType="textCapWords"
                style="@style/BookFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Publish Year category -->
    <LinearLayout
        android:id="@+id/container_year_published"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_publish_year"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- publish_yeear drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_publish_year"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Borrower category -->
    <LinearLayout
        android:id="@+id/container_book_borrower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/book_borrower"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Borrower input field -->
            <EditText
                android:id="@+id/book_borrower_name"
                android:hint="@string/hint_borrower_name"
                style="@style/BookFieldStyle" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
